# lkml-mcp

./: .gitignore  .mcpbignore  README.md  lkml.mcpb  manifest.json  pyproject.toml  spec
.claude-plugin/: plugin.json
src/lkml_mcp/: __init__.py  client.py  handlers.py  server.py
tests/: __init__.py  test_lkml_client.py  test_mcp_server.py  test_multi_inbox.py
